# novada-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  PLAN.md  PROMPT.md  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  novada-config.cmake.in
examples/: CMakeLists.txt  proxy.cpp  scraper.cpp  wallet.cpp
include/novada/: client.hpp  errors.hpp  version.hpp
include/novada/detail/: envelope.hpp  form_builder.hpp  transport.hpp  validator.hpp
include/novada/proxy/: account_service.hpp  dedicated_dc_service.hpp  mobile_service.hpp  prohibit_domain_service.hpp  proxy_service.hpp  residential_service.hpp  rotating_service.hpp  static_isp_service.hpp  types.hpp  unlimited_service.hpp  whitelist_service.hpp
include/novada/scraper/: api_service.hpp  browser_service.hpp  google_service.hpp  scraper_service.hpp  types.hpp  unblocker_service.hpp  universal_service.hpp  youtube_service.hpp
include/novada/wallet/: wallet_service.hpp
packaging/vcpkg/: portfile.cmake  vcpkg.json
scripts/: sync_reference.sh
src/: client.cpp  errors.cpp
src/detail/: envelope.cpp  transport.cpp
src/proxy/: account_service.cpp  dedicated_dc_service.cpp  flow_helpers.hpp  mobile_service.cpp  prohibit_domain_service.cpp  residential_service.cpp  rotating_service.cpp  static_helpers.hpp  static_isp_service.cpp  types.cpp  unlimited_service.cpp  whitelist_service.cpp
src/scraper/: browser_service.cpp  google_service.cpp  scrape_exec.cpp  scrape_exec.hpp  scraper_service.cpp  types.cpp  unblocker_service.cpp  universal_service.cpp  youtube_service.cpp
src/wallet/: wallet_service.cpp
tests/: CMakeLists.txt  client_test.cpp  errors_test.cpp
tests/detail/: envelope_test.cpp  transport_test.cpp
tests/proxy/: account_service_test.cpp  mobile_service_test.cpp  residential_service_test.cpp  rotating_service_test.cpp  static_service_test.cpp  unlimited_prohibit_service_test.cpp  whitelist_service_test.cpp
tests/scraper/: api_service_test.cpp  query_service_test.cpp  scraper_service_test.cpp  unblocker_service_test.cpp
tests/support/: mock_server.hpp  service_test_util.hpp
tests/wallet/: wallet_service_test.cpp
